--- a/typing-animation.html
+++ b/typing-animation.html
@@ -126,9 +126,9 @@
         let textSize = 0;
         let textCenter = 0;
         const letters = [];
-        const prompt = ['H','A','P','P','Y',' ','B','I','R','T','H','D','A','Y',' ','C','H','R','I','S','T','I','N','A',' ','D','O','R','A','T','H','Y'];
+        const prompt = ['H','A','P','P','Y',' ','B','I','R','T','H','D','A','Y',' ','N','I','J','A','N','T','H','A','N',' ','L','A','A','A','A'];
         // const prompt = ['H', 'I']
-        const thanks = ['T','H','A','N','K','S',' ','F','O','R',' ','T','H','E',' ','M','E','M','O','R','I','E','S',' ','<3']
+        const thanks = ['M','Y',' ','E','V','E','R','Y','T','H','I','N','G','<3']
         let runPrompt = true;
 
         const resizePage = () => {
