--- a/typing-animation.html
+++ b/typing-animation.html
@@ -128,7 +128,7 @@
         const letters = [];
         const prompt = ['H','A','P','P','Y',' ','B','I','R','T','H','D','A','Y',' ','N','I','J','A','N','T','H','A','N',' ','L','A','A','A','A'];
         // const prompt = ['H', 'I']
-        const thanks = ['M','Y',' ','E','V','E','R','Y','T','H','I','N','G','<3']
+        const thanks = ['M','Y',' ','E','V','E','R','Y','T','H','I','N','G',' ','<3']
         let runPrompt = true;
 
         const resizePage = () => {
@@ -314,7 +314,7 @@
             }
           }, 300);
           setTimeout(() => {
-            if(i===29){
+            if(i===30){
                 addThanks(0);
           }
           }, 300);
