--- a/typing-animation.html
+++ b/typing-animation.html
@@ -126,7 +126,7 @@
         let textSize = 0;
         let textCenter = 0;
         const letters = [];
-        const prompt = ['H','A','P','P','Y',' ','B','I','R','T','H','D','A','Y',' ','N','I','J','A','N','T','H','A','N',' ','L','A','A','A','A'];
+        const prompt = ['H','A','P','P','Y',' ','B','I','R','T','H','D','A','Y',' ','N','I','J','A','N','T','H','A','N',' ','D','O','O','O','O'];
         // const prompt = ['H', 'I']
         const thanks = ['M','Y',' ','E','V','E','R','Y','T','H','I','N','G',' ','<3']
         let runPrompt = true;
